// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeveloperAppsCollection should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.mock-styled.h2>
        My Apps
      </mock-styled.mock-styled.h2>
      <mock-styled.div>
        <mock-styled.div>
          <div
            class="el-flex-container el-flex-align-center"
          >
            <mock-styled.span
              classname="el-mr3"
              role="img"
              style="font-size: 3.75rem;"
            >
              <svg
                fill="none"
                height="1em"
                style="font-size: 3.75rem;"
                viewBox="0 0 80 80"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  clip-path="url(#developerAppsInfographic_svg__a)"
                >
                  <circle
                    cx="40"
                    cy="40"
                    fill="#d8dee4"
                    r="40"
                  />
                  <path
                    d="M73.098 63c2.152-.005 3.895-1.72 3.902-3.838V17.24c-.005-2.118-1.75-3.835-3.902-3.84H52.84A3.85 3.85 0 0 0 49 17.24v41.92A3.85 3.85 0 0 0 52.84 63z"
                    fill="#798da1"
                  />
                  <path
                    d="M73.098 63H52.902c-2.152-.005-3.897-1.722-3.902-3.84v-4.863h28v4.865c-.007 2.117-1.75 3.833-3.902 3.838"
                    fill="#607890"
                  />
                  <rect
                    fill="#d8dee4"
                    height="9"
                    rx="1"
                    width="9"
                    x="53"
                    y="18"
                  />
                  <rect
                    fill="#9faebc"
                    height="9"
                    rx="1"
                    width="9"
                    x="64"
                    y="18"
                  />
                  <rect
                    fill="#d8dee4"
                    height="9"
                    rx="1"
                    width="9"
                    x="53"
                    y="29"
                  />
                  <rect
                    fill="#fff"
                    height="9"
                    rx="1"
                    width="9"
                    x="64"
                    y="29"
                  />
                  <rect
                    fill="#9faebc"
                    height="9"
                    rx="1"
                    width="9"
                    x="53"
                    y="40"
                  />
                  <rect
                    fill="#d8dee4"
                    height="9"
                    rx="1"
                    width="9"
                    x="64"
                    y="40"
                  />
                  <path
                    d="M14 70.477c.997-4.682 2.32-8.202 5.738-11.362 2.809-2.598 12.224-3.166 13.786-2.583 2.22-2.932 5.059-5.952 5.059-5.952s5.036.937 8.13 5.807l.022-.029c.694-.746 7.206-.41 10.964 1.148 4.095 1.7 4.946 4.306 5.832 7.024.232.712.467 1.432.763 2.145 1.004 2.416 1.44 2.252 1.706 3.802C60 75.5 50.807 80 40.82 80 29.974 80 20.5 76.5 14 70.477"
                    fill="#fff"
                  />
                  <path
                    d="M24.72 77.1c.834-3.493 2.03-7.723 2.03-7.723s-.478 4.487.074 8.473a42 42 0 0 1-2.104-.75M53.5 77.7c.958-4.413.183-9.536.183-9.536s2 4.559 2.817 8.336c-.889.315-2.07.94-3 1.2M40.522 60.361c3.565-.171 6.344-2.596 6.208-5.415s-3.135-4.965-6.7-4.793c-3.564.171-6.343 2.596-6.207 5.415s3.135 4.965 6.7 4.793"
                    fill="#d8dee4"
                  />
                  <path
                    d="M21.048 32.802c.265.555.53 1.054.785 1.483 3.898-5.253 3.359-8.87 2.894-11.987-.217-1.452-.417-2.797-.146-4.148.05.446.144.881.28 1.296.608 1.86 2.076 3.193 3.823 4.077-.787-2.285-1.418-4.498-1.42-6.602.765.513 1.642 1.01 2.544 1.521 2.165 1.227 4.473 2.535 5.713 4.342-.044-2.456-.503-4.177-1.167-5.499 1.165.252 2.446.345 3.813.167 1.567-.204 2.97-.472 4.25-.717 5.1-.973 8.238-1.572 11.916 3.717 1.951 2.805 2.08 5.798 2.193 8.374.061 1.426.118 2.724.474 3.793q.38-.8.703-1.6c1.885.719 3.28 2.599 3.39 4.867.132 2.753-1.677 5.119-4.143 5.583-1.337 7.533-5.586 16.07-16.979 16.618-10.243.494-14.94-7.94-17.048-14.642a5 5 0 0 1-.324.026c-2.792.135-5.173-2.181-5.317-5.172-.125-2.612 1.494-4.874 3.766-5.497"
                    fill="#FFE5C7"
                  />
                  <path
                    d="M29.724 27.245c-.027.479.57.38 1.069.298l.012-.002c.397-.066.597-.217.815-.381.354-.268.753-.569 2.116-.581.326-.003.735.206 1.131.407.574.293 1.12.571 1.337.167 1.046-1.941-6.291-3.228-6.48.092M52.392 26.68c-.5-.938-2.159-1.34-3.307-1.213-.962.106-2.571.588-2.502 1.572.021.301.473.247.824.167a3.4 3.4 0 0 0 .579-.196c.215-.09.415-.172.713-.2.512-.047 1.04.041 1.491.245q.186.087.356.183c.384.21.736.401 1.267.252.618-.174.83-.341.579-.81M49.577 32.422q.093.035.175.081c1.273.728.73 3.674-1.415 2.919-1.485-.523-.794-3.747 1.24-3M33.65 32.216a1.3 1.3 0 0 0-.19-.088c-2.205-.81-2.953 2.685-1.344 3.252 2.324.818 2.914-2.375 1.533-3.164M48 46.619s-3.465 4.962-10 2.885c3.525 2.724 8.674 3.787 10-2.885"
                    fill="#506478"
                  />
                  <path
                    d="M49.5 32.86c-.225-.213-.654-.023-.593.268.031.149.061.267.198.368.21.155.628-.026.611-.272-.01-.16-.098-.252-.215-.363"
                    fill="#fff"
                  />
                  <path
                    d="M29.223 3.648c-3.284.217-5.73 3.254-6.231 6.11a4.55 4.55 0 0 0-2.353.86c-1.004.75-1.512 1.914-1.69 3.156.827-1.276 1.822-1.541 2.954-1.561-6.89 4.147-2.886 17.329-.07 22.073 3.898-5.254 3.359-8.87 2.894-11.988-.217-1.452-.417-2.797-.146-4.148.05.446.144.881.28 1.296.608 1.86 2.076 3.193 3.823 4.077-.787-2.285-1.418-4.498-1.42-6.602.765.513 1.642 1.01 2.544 1.522 2.165 1.226 4.473 2.534 5.713 4.341-.044-2.456-.503-4.177-1.167-5.499 1.165.252 2.446.345 3.813.167 1.567-.204 2.97-.472 4.25-.717 5.1-.973 8.238-1.572 11.916 3.717 1.951 2.805 2.08 5.798 2.193 8.374.061 1.426.118 2.724.474 3.793 6.333-13.334 1-27.2-14.833-30.167-6.79-1.272-13.69.648-16.224 5.537.268-1.957.766-3.637 3.28-4.341"
                    fill="#506478"
                  />
                  <path
                    d="M33.377 32.603c-.245-.232-.71-.025-.644.29.034.161.066.29.215.4.227.167.68-.03.662-.296-.012-.174-.106-.273-.233-.394"
                    fill="#fff"
                  />
                  <path
                    d="M24.377 29.637V39.6c0 .376.308.683.684.683H37.38a.685.685 0 0 0 .683-.683v-4.367h4.241V39.6c0 .375.308.682.684.682h12.319a.685.685 0 0 0 .683-.683v-9.963a.685.685 0 0 0-.684-.682H42.989a.685.685 0 0 0-.684.682v4.231H38.03v-4.231a.685.685 0 0 0-.684-.682H25.061a.685.685 0 0 0-.684.682m19.628 1.683H54.29v6.598H44.005zm-17.927 0h10.284v6.598H26.078z"
                    fill="#506478"
                  />
                  <path
                    d="M31.471 52H8.53C6.032 52 4 54.082 4 56.642v14.714C4 73.917 6.032 76 8.529 76H31.47C33.968 76 36 73.917 36 71.355V56.643c0-2.56-2.032-4.644-4.529-4.644"
                    fill="#fff"
                  />
                  <path
                    d="M31.47 52h-6.489c-2.497 0-4.528 2.082-4.528 4.642L15.72 71.357c0 2.56 2.032 4.644 4.529 4.644h11.22c2.497 0 4.53-2.083 4.53-4.644V56.643c0-2.56-2.033-4.644-4.53-4.644"
                    fill="#fff"
                  />
                  <path
                    d="M31.471 52H8.53C6.032 52 4 54.082 4 56.642v14.714C4 73.917 6.032 76 8.529 76H31.47C33.968 76 36 73.917 36 71.355V56.643c0-2.56-2.032-4.644-4.529-4.644m-15.858 7.386L10.85 64.27l4.237 4.343a.98.98 0 0 1 0 1.359.92.92 0 0 1-1.326 0l-4.9-5.023a.98.98 0 0 1 0-1.359l5.427-5.563a.92.92 0 0 1 1.326 0 .98.98 0 0 1 0 1.359m8.195-2.261-4.957 14.39a.93.93 0 0 1-1.197.585.97.97 0 0 1-.572-1.226l4.958-14.39a.93.93 0 0 1 1.196-.585.97.97 0 0 1 .572 1.226m7.332 7.284-5.427 5.563a.92.92 0 0 1-1.326 0 .98.98 0 0 1 0-1.359l4.764-4.884-4.237-4.343a.98.98 0 0 1 0-1.359.92.92 0 0 1 1.326 0l4.9 5.023a.98.98 0 0 1 0 1.359"
                    fill="#7e9bfa"
                  />
                </g>
                <defs>
                  <clippath
                    id="developerAppsInfographic_svg__a"
                  >
                    <path
                      d="M0 0h80v80H0z"
                      fill="#fff"
                    />
                  </clippath>
                </defs>
              </svg>
            </mock-styled.span>
            <mock-styled.mock-styled.p>
              Apps you are currently developing show here. These will not be visible to users until approved for public listing.
            </mock-styled.mock-styled.p>
          </div>
        </mock-styled.div>
        <mock-styled.div
          classname="el-fade-in"
        >
          <div
            class="el-flex-container el-flex-align-center"
          >
            <mock-styled.div
              classname="el-mr5"
              role="img"
              style="font-size: 1.25em; width: 32px; height: 32px;"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 60 35"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                  fill="#E3E3E3"
                />
              </svg>
            </mock-styled.div>
            <mock-styled.mock-styled.p>
              MOCK_APP_NAME
            </mock-styled.mock-styled.p>
          </div>
        </mock-styled.div>
        <mock-styled.div
          classname="el-fade-in"
        >
          <div
            class="el-flex-container el-flex-align-center"
          >
            <mock-styled.div
              classname="el-mr5"
              role="img"
              style="font-size: 1.25em; width: 32px; height: 32px;"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 60 35"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                  fill="#E3E3E3"
                />
              </svg>
            </mock-styled.div>
            <mock-styled.mock-styled.p>
              MOCK_APP_NAME_ANOTHER
            </mock-styled.mock-styled.p>
          </div>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.mock-styled.h2>
      My Apps
    </mock-styled.mock-styled.h2>
    <mock-styled.div>
      <mock-styled.div>
        <div
          class="el-flex-container el-flex-align-center"
        >
          <mock-styled.span
            classname="el-mr3"
            role="img"
            style="font-size: 3.75rem;"
          >
            <svg
              fill="none"
              height="1em"
              style="font-size: 3.75rem;"
              viewBox="0 0 80 80"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#developerAppsInfographic_svg__a)"
              >
                <circle
                  cx="40"
                  cy="40"
                  fill="#d8dee4"
                  r="40"
                />
                <path
                  d="M73.098 63c2.152-.005 3.895-1.72 3.902-3.838V17.24c-.005-2.118-1.75-3.835-3.902-3.84H52.84A3.85 3.85 0 0 0 49 17.24v41.92A3.85 3.85 0 0 0 52.84 63z"
                  fill="#798da1"
                />
                <path
                  d="M73.098 63H52.902c-2.152-.005-3.897-1.722-3.902-3.84v-4.863h28v4.865c-.007 2.117-1.75 3.833-3.902 3.838"
                  fill="#607890"
                />
                <rect
                  fill="#d8dee4"
                  height="9"
                  rx="1"
                  width="9"
                  x="53"
                  y="18"
                />
                <rect
                  fill="#9faebc"
                  height="9"
                  rx="1"
                  width="9"
                  x="64"
                  y="18"
                />
                <rect
                  fill="#d8dee4"
                  height="9"
                  rx="1"
                  width="9"
                  x="53"
                  y="29"
                />
                <rect
                  fill="#fff"
                  height="9"
                  rx="1"
                  width="9"
                  x="64"
                  y="29"
                />
                <rect
                  fill="#9faebc"
                  height="9"
                  rx="1"
                  width="9"
                  x="53"
                  y="40"
                />
                <rect
                  fill="#d8dee4"
                  height="9"
                  rx="1"
                  width="9"
                  x="64"
                  y="40"
                />
                <path
                  d="M14 70.477c.997-4.682 2.32-8.202 5.738-11.362 2.809-2.598 12.224-3.166 13.786-2.583 2.22-2.932 5.059-5.952 5.059-5.952s5.036.937 8.13 5.807l.022-.029c.694-.746 7.206-.41 10.964 1.148 4.095 1.7 4.946 4.306 5.832 7.024.232.712.467 1.432.763 2.145 1.004 2.416 1.44 2.252 1.706 3.802C60 75.5 50.807 80 40.82 80 29.974 80 20.5 76.5 14 70.477"
                  fill="#fff"
                />
                <path
                  d="M24.72 77.1c.834-3.493 2.03-7.723 2.03-7.723s-.478 4.487.074 8.473a42 42 0 0 1-2.104-.75M53.5 77.7c.958-4.413.183-9.536.183-9.536s2 4.559 2.817 8.336c-.889.315-2.07.94-3 1.2M40.522 60.361c3.565-.171 6.344-2.596 6.208-5.415s-3.135-4.965-6.7-4.793c-3.564.171-6.343 2.596-6.207 5.415s3.135 4.965 6.7 4.793"
                  fill="#d8dee4"
                />
                <path
                  d="M21.048 32.802c.265.555.53 1.054.785 1.483 3.898-5.253 3.359-8.87 2.894-11.987-.217-1.452-.417-2.797-.146-4.148.05.446.144.881.28 1.296.608 1.86 2.076 3.193 3.823 4.077-.787-2.285-1.418-4.498-1.42-6.602.765.513 1.642 1.01 2.544 1.521 2.165 1.227 4.473 2.535 5.713 4.342-.044-2.456-.503-4.177-1.167-5.499 1.165.252 2.446.345 3.813.167 1.567-.204 2.97-.472 4.25-.717 5.1-.973 8.238-1.572 11.916 3.717 1.951 2.805 2.08 5.798 2.193 8.374.061 1.426.118 2.724.474 3.793q.38-.8.703-1.6c1.885.719 3.28 2.599 3.39 4.867.132 2.753-1.677 5.119-4.143 5.583-1.337 7.533-5.586 16.07-16.979 16.618-10.243.494-14.94-7.94-17.048-14.642a5 5 0 0 1-.324.026c-2.792.135-5.173-2.181-5.317-5.172-.125-2.612 1.494-4.874 3.766-5.497"
                  fill="#FFE5C7"
                />
                <path
                  d="M29.724 27.245c-.027.479.57.38 1.069.298l.012-.002c.397-.066.597-.217.815-.381.354-.268.753-.569 2.116-.581.326-.003.735.206 1.131.407.574.293 1.12.571 1.337.167 1.046-1.941-6.291-3.228-6.48.092M52.392 26.68c-.5-.938-2.159-1.34-3.307-1.213-.962.106-2.571.588-2.502 1.572.021.301.473.247.824.167a3.4 3.4 0 0 0 .579-.196c.215-.09.415-.172.713-.2.512-.047 1.04.041 1.491.245q.186.087.356.183c.384.21.736.401 1.267.252.618-.174.83-.341.579-.81M49.577 32.422q.093.035.175.081c1.273.728.73 3.674-1.415 2.919-1.485-.523-.794-3.747 1.24-3M33.65 32.216a1.3 1.3 0 0 0-.19-.088c-2.205-.81-2.953 2.685-1.344 3.252 2.324.818 2.914-2.375 1.533-3.164M48 46.619s-3.465 4.962-10 2.885c3.525 2.724 8.674 3.787 10-2.885"
                  fill="#506478"
                />
                <path
                  d="M49.5 32.86c-.225-.213-.654-.023-.593.268.031.149.061.267.198.368.21.155.628-.026.611-.272-.01-.16-.098-.252-.215-.363"
                  fill="#fff"
                />
                <path
                  d="M29.223 3.648c-3.284.217-5.73 3.254-6.231 6.11a4.55 4.55 0 0 0-2.353.86c-1.004.75-1.512 1.914-1.69 3.156.827-1.276 1.822-1.541 2.954-1.561-6.89 4.147-2.886 17.329-.07 22.073 3.898-5.254 3.359-8.87 2.894-11.988-.217-1.452-.417-2.797-.146-4.148.05.446.144.881.28 1.296.608 1.86 2.076 3.193 3.823 4.077-.787-2.285-1.418-4.498-1.42-6.602.765.513 1.642 1.01 2.544 1.522 2.165 1.226 4.473 2.534 5.713 4.341-.044-2.456-.503-4.177-1.167-5.499 1.165.252 2.446.345 3.813.167 1.567-.204 2.97-.472 4.25-.717 5.1-.973 8.238-1.572 11.916 3.717 1.951 2.805 2.08 5.798 2.193 8.374.061 1.426.118 2.724.474 3.793 6.333-13.334 1-27.2-14.833-30.167-6.79-1.272-13.69.648-16.224 5.537.268-1.957.766-3.637 3.28-4.341"
                  fill="#506478"
                />
                <path
                  d="M33.377 32.603c-.245-.232-.71-.025-.644.29.034.161.066.29.215.4.227.167.68-.03.662-.296-.012-.174-.106-.273-.233-.394"
                  fill="#fff"
                />
                <path
                  d="M24.377 29.637V39.6c0 .376.308.683.684.683H37.38a.685.685 0 0 0 .683-.683v-4.367h4.241V39.6c0 .375.308.682.684.682h12.319a.685.685 0 0 0 .683-.683v-9.963a.685.685 0 0 0-.684-.682H42.989a.685.685 0 0 0-.684.682v4.231H38.03v-4.231a.685.685 0 0 0-.684-.682H25.061a.685.685 0 0 0-.684.682m19.628 1.683H54.29v6.598H44.005zm-17.927 0h10.284v6.598H26.078z"
                  fill="#506478"
                />
                <path
                  d="M31.471 52H8.53C6.032 52 4 54.082 4 56.642v14.714C4 73.917 6.032 76 8.529 76H31.47C33.968 76 36 73.917 36 71.355V56.643c0-2.56-2.032-4.644-4.529-4.644"
                  fill="#fff"
                />
                <path
                  d="M31.47 52h-6.489c-2.497 0-4.528 2.082-4.528 4.642L15.72 71.357c0 2.56 2.032 4.644 4.529 4.644h11.22c2.497 0 4.53-2.083 4.53-4.644V56.643c0-2.56-2.033-4.644-4.53-4.644"
                  fill="#fff"
                />
                <path
                  d="M31.471 52H8.53C6.032 52 4 54.082 4 56.642v14.714C4 73.917 6.032 76 8.529 76H31.47C33.968 76 36 73.917 36 71.355V56.643c0-2.56-2.032-4.644-4.529-4.644m-15.858 7.386L10.85 64.27l4.237 4.343a.98.98 0 0 1 0 1.359.92.92 0 0 1-1.326 0l-4.9-5.023a.98.98 0 0 1 0-1.359l5.427-5.563a.92.92 0 0 1 1.326 0 .98.98 0 0 1 0 1.359m8.195-2.261-4.957 14.39a.93.93 0 0 1-1.197.585.97.97 0 0 1-.572-1.226l4.958-14.39a.93.93 0 0 1 1.196-.585.97.97 0 0 1 .572 1.226m7.332 7.284-5.427 5.563a.92.92 0 0 1-1.326 0 .98.98 0 0 1 0-1.359l4.764-4.884-4.237-4.343a.98.98 0 0 1 0-1.359.92.92 0 0 1 1.326 0l4.9 5.023a.98.98 0 0 1 0 1.359"
                  fill="#7e9bfa"
                />
              </g>
              <defs>
                <clippath
                  id="developerAppsInfographic_svg__a"
                >
                  <path
                    d="M0 0h80v80H0z"
                    fill="#fff"
                  />
                </clippath>
              </defs>
            </svg>
          </mock-styled.span>
          <mock-styled.mock-styled.p>
            Apps you are currently developing show here. These will not be visible to users until approved for public listing.
          </mock-styled.mock-styled.p>
        </div>
      </mock-styled.div>
      <mock-styled.div
        classname="el-fade-in"
      >
        <div
          class="el-flex-container el-flex-align-center"
        >
          <mock-styled.div
            classname="el-mr5"
            role="img"
            style="font-size: 1.25em; width: 32px; height: 32px;"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 60 35"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                fill="#E3E3E3"
              />
            </svg>
          </mock-styled.div>
          <mock-styled.mock-styled.p>
            MOCK_APP_NAME
          </mock-styled.mock-styled.p>
        </div>
      </mock-styled.div>
      <mock-styled.div
        classname="el-fade-in"
      >
        <div
          class="el-flex-container el-flex-align-center"
        >
          <mock-styled.div
            classname="el-mr5"
            role="img"
            style="font-size: 1.25em; width: 32px; height: 32px;"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 60 35"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                fill="#E3E3E3"
              />
            </svg>
          </mock-styled.div>
          <mock-styled.mock-styled.p>
            MOCK_APP_NAME_ANOTHER
          </mock-styled.mock-styled.p>
        </div>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeveloperAppsCollection should match a snapshot when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
